# CourseraAlgorithms

./: CMakeLists.txt  README.md
doc/week1/: test1.txt  test2.txt  test3.txt  test7.txt
doc/week2/: testArray1.txt  testArray3.txt  testArray5.txt
doc/week3/: testArray2.txt
doc/week4/: testMinCut1.txt
lib/: CMakeLists.txt
lib/file_ops/: CMakeLists.txt  FileOperations.hpp
lib/file_ops/src/: FileOperations.cpp
lib/graph/: CMakeLists.txt  Graph.hpp
lib/graph/src/: Graph.cpp
lib/string_int/: CMakeLists.txt  StringInt.hpp
lib/string_int/src/: StringInt.cpp
problems/: CMakeLists.txt  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp
test/: CMakeLists.txt  stringIntTests.cpp
